--- a/18. Build Your Own Component Library/package.json
+++ b/18. Build Your Own Component Library/package.json
@@ -1,17 +1,38 @@
 {
   "name": "component-lib",
   "version": "1.0.0",
-  "main": "index.js",
+"main": "dist/cjs/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rollup": "rollup -c --bundleConfigAsCjs"
   },
-  "keywords": [],
+  "keywords": [
+    "tutorial",
+    "button",
+    "test"
+  ],
+  "type": "module",
+  "peerDependencies": {
+    "react": "^19.0.0"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/react": "^19.0.7",
     "react": "^19.0.0",
+    "rollup": "^4.30.1",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.3"
   }
 }
