--- a/18. Build Your Own Component Library/package.json
+++ b/18. Build Your Own Component Library/package.json
@@ -50,7 +50,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
     "vite": "^6.0.7"
   }
 }
