--- a/18. Build Your Own Component Library/tsconfig.json
+++ b/18. Build Your Own Component Library/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "skipLibCheck": true,
     "rootDir": ".",
+    "types": ["vitest/globals"],
 
     "jsx": "react",
     "module": "ESNext",
