--- a/18. Build Your Own Component Library/package.json
+++ b/18. Build Your Own Component Library/package.json
@@ -43,6 +43,7 @@
     "@testing-library/user-event": "^14.6.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.7",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.1",
