--- a/20. React Design System/package.json
+++ b/20. React Design System/package.json
@@ -2,5 +2,8 @@
   "packageManager": "yarn@4.6.0",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "typescript": "^5.7.3"
+  }
 }
