--- a/20. React Design System/packages/storybook/package.json
+++ b/20. React Design System/packages/storybook/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "@huxn-ds/foundation": "workspace:^",
     "@huxn-ds/react": "workspace:^"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
