Design Tokens Added

--- a/20. React Design System/packages/foundation/package.json
+++ b/20. React Design System/packages/foundation/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@huxn-ds/foundation",
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "devDependencies": {
+    "style-dictionary": "^4.3.0"
+  }
 }
