--- a/20. React Design System/packages/storybook/package.json
+++ b/20. React Design System/packages/storybook/package.json
@@ -7,6 +7,20 @@
     "@huxn-ds/react": "workspace:^"
   },
   "devDependencies": {
-    "typescript": "^5.7.3"
+    "@chromatic-com/storybook": "3.2.3",
+    "@storybook/addon-essentials": "8.4.7",
+    "@storybook/addon-interactions": "8.4.7",
+    "@storybook/addon-onboarding": "8.4.7",
+    "@storybook/blocks": "8.4.7",
+    "@storybook/react": "8.4.7",
+    "@storybook/react-vite": "8.4.7",
+    "@storybook/test": "8.4.7",
+    "storybook": "8.4.7",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7"
+  },
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   }
 }
