--- a/20. React Design System/.gitignore
+++ b/20. React Design System/.gitignore
@@ -4,10 +4,6 @@
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/caching#zero-installs
-
-#!.yarn/cache
+/node_modules
 .pnp.*
+*storybook.log
